--- a/Homework/Fztable/src/normal/css.css
+++ b/Homework/Fztable/src/normal/css.css
@@ -8,10 +8,15 @@
 }
 
 body {
-  font-family: Verdana, Arial, "微軟正黑體", "Microsoft JhengHei", "微軟雅黑體", "Microsoft YaHei";
+  font-family: Verdana, Arial, "微軟正黑體", "Microsoft JhengHei", "微軟雅黑體", "Microsoft YaHei";
 }
 
-#Fztable .default {
+#Fztable {
+  width: 100%;
+  margin: 0 auto;
+}
+
+#Fztable .default, #Fztable .rel {
   position: relative;
   width: 100%;
   margin: auto;
@@ -23,7 +28,8 @@ body {
 }
 
 #Fztable .default .next,
-#Fztable .default .prev {
+#Fztable .default .prev, #Fztable .rel .next,
+#Fztable .rel .prev {
   width: 25px;
   height: 50px;
   display: -webkit-box;
@@ -46,78 +52,80 @@ body {
   color: white;
 }
 
-#Fztable .default .next {
+#Fztable .default .next, #Fztable .rel .next {
   right: 0;
 }
 
-#Fztable .default .prev {
+#Fztable .default .prev, #Fztable .rel .prev {
   left: 80px;
 }
 
-#Fztable .default .left .BackAndGo {
+#Fztable .default .left .BackAndGo, #Fztable .rel .left .BackAndGo {
   width: 80px;
   height: 65px;
   outline: 1px solid #e2e2e2;
   position: relative;
 }
 
-#Fztable .default .left .BackAndGo span {
+#Fztable .default .left .BackAndGo span, #Fztable .rel .left .BackAndGo span {
   position: absolute;
 }
 
-#Fztable .default .left .BackAndGo span:nth-child(1) {
+#Fztable .default .left .BackAndGo span:nth-child(1), #Fztable .rel .left .BackAndGo span:nth-child(1) {
   bottom: 5px;
   left: 5px;
 }
 
-#Fztable .default .left .BackAndGo span:nth-child(2) {
+#Fztable .default .left .BackAndGo span:nth-child(2), #Fztable .rel .left .BackAndGo span:nth-child(2) {
   top: 5px;
   right: 5px;
 }
 
-#Fztable .default .left > ul li {
+#Fztable .default .left > ul li, #Fztable .rel .left > ul li {
   width: 80px;
   height: 65px;
   line-height: 65px;
   outline: 1px solid #e2e2e2;
 }
 
-#Fztable .default .right {
+#Fztable .default .right, #Fztable .rel .right {
   position: relative;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  overflow: auto;
+  overflow: hidden;
 }
 
-#Fztable .default .right .slider-move {
+#Fztable .default .right .slider-move, #Fztable .rel .right .slider-move {
   position: relative;
 }
 
-#Fztable .default .right .slider-move > ul {
+#Fztable .default .right .slider-move > ul, #Fztable .rel .right .slider-move > ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#Fztable .default .right .slider-move > ul li {
+#Fztable .default .right .slider-move > ul li, #Fztable .rel .right .slider-move > ul li {
   height: 65px;
   outline: 1px solid #e2e2e2;
 }
 
 @media screen and (min-width: 768px) {
-  #Fztable .default {
-    width: 767px;
+  #Fztable {
+    width: 90%;
   }
   #Fztable .default .right ul,
-  #Fztable .default .right li {
+  #Fztable .default .right li, #Fztable .rel .right ul,
+  #Fztable .rel .right li {
     width: auto;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
   }
   #Fztable .default .next,
-  #Fztable .default .prev {
+  #Fztable .default .prev, #Fztable .rel .next,
+  #Fztable .rel .prev {
     display: none;
   }
 }
