Update 9/3 計算最後一個寬度

--- a/Homework/Fztable/src/css.scss
+++ b/Homework/Fztable/src/css.scss
@@ -49,6 +49,9 @@ body {
       z-index: 1;
       font-size: 20px;
       color: white;
+      &.hidden {
+        display: none;
+      }
     }
     .next {
       right: 0;
