--- a/Homework/Fztable/src/normal/css.css
+++ b/Homework/Fztable/src/normal/css.css
@@ -8,7 +8,27 @@
 }
 
 body {
-  font-family: Verdana, Arial, "微軟正黑體", "Microsoft JhengHei", "微軟雅黑體", "Microsoft YaHei";
+  font-family: Verdana, Arial, "微軟正黑體", "Microsoft JhengHei", "微軟雅黑體", "Microsoft YaHei";
+}
+
+#Fztable .default .BackAndGo, #Fztable .rel .BackAndGo {
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+  position: relative;
+}
+
+#Fztable .default .BackAndGo span, #Fztable .rel .BackAndGo span {
+  position: absolute;
+}
+
+#Fztable .default .BackAndGo span:nth-child(1), #Fztable .rel .BackAndGo span:nth-child(1) {
+  bottom: 5px;
+  left: 5px;
+}
+
+#Fztable .default .BackAndGo span:nth-child(2), #Fztable .rel .BackAndGo span:nth-child(2) {
+  top: 5px;
+  right: 5px;
 }
 
 #Fztable {
@@ -63,51 +83,6 @@ body {
   display: none;
 }
 
-#Fztable .default .next,
-#Fztable .rel .next {
-  right: 0;
-}
-
-#Fztable .default .prev,
-#Fztable .rel .prev {
-  left: 100px;
-}
-
-#Fztable .default .left .BackAndGo,
-#Fztable .rel .left .BackAndGo {
-  width: 100px;
-  height: 65px;
-  border-bottom: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  position: relative;
-}
-
-#Fztable .default .left .BackAndGo span,
-#Fztable .rel .left .BackAndGo span {
-  position: absolute;
-}
-
-#Fztable .default .left .BackAndGo span:nth-child(1),
-#Fztable .rel .left .BackAndGo span:nth-child(1) {
-  bottom: 5px;
-  left: 5px;
-}
-
-#Fztable .default .left .BackAndGo span:nth-child(2),
-#Fztable .rel .left .BackAndGo span:nth-child(2) {
-  top: 5px;
-  right: 5px;
-}
-
-#Fztable .default .left > ul li,
-#Fztable .rel .left > ul li {
-  width: 100px;
-  height: 65px;
-  line-height: 65px;
-  border-bottom: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-}
-
 #Fztable .default .right,
 #Fztable .rel .right {
   position: relative;
@@ -134,26 +109,6 @@ body {
   display: flex;
 }
 
-#Fztable .default .right .slider-move > ul li,
-#Fztable .rel .right .slider-move > ul li {
-  cursor: pointer;
-  height: 65px;
-  line-height: 65px;
-  border-bottom: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-}
-
-#Fztable .default .right .slider-move > ul li.active,
-#Fztable .rel .right .slider-move > ul li.active {
-  background-color: #f7f7f7;
-}
-
-#Fztable .default .right .slider-move > ul li.activeThis,
-#Fztable .rel .right .slider-move > ul li.activeThis {
-  border: 1px solid #fe8b88;
-  background-color: #fff9e3;
-}
-
 #Fztable .default .right .slider-move .rowStyle li,
 #Fztable .rel .right .slider-move .rowStyle li {
   cursor: auto;
@@ -169,6 +124,158 @@ body {
 #Fztable .default .columnStyle,
 #Fztable .rel .columnStyle {
   background-color: #eee;
+}
+
+#Fztable .default .BackAndGo {
+  width: 100px;
+  height: 65px;
+}
+
+#Fztable .default .left > ul li {
+  width: 100px;
+  height: 65px;
+  line-height: 65px;
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+}
+
+#Fztable .default .right li {
+  cursor: pointer;
+  height: 65px;
+  line-height: 65px;
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+}
+
+#Fztable .default .right li.active {
+  background-color: #f7f7f7;
+}
+
+#Fztable .default .right li.activeThis {
+  border: 1px solid #fe8b88;
+  background-color: #fff9e3;
+}
+
+#Fztable .default .next {
+  right: 0;
+}
+
+#Fztable .default .prev {
+  left: 100px;
+}
+
+#Fztable .rel .BackAndGo {
+  width: 150px;
+  height: 65px;
+}
+
+#Fztable .rel .left > ul li {
+  width: 150px;
+  height: 65px;
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+}
+
+#Fztable .rel .right li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  cursor: pointer;
+  height: 65px;
+  border-bottom: 1px solid #e2e2e2;
+  border-right: 1px solid #e2e2e2;
+}
+
+#Fztable .rel .right li.active {
+  background-color: #f7f7f7;
+}
+
+#Fztable .rel .right li.activeThis {
+  border: 1px solid #fe8b88;
+  background-color: #fff9e3;
+}
+
+#Fztable .rel .columnStyle {
+  text-align: left;
+}
+
+#Fztable .rel .columnStyle li {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 10px;
+}
+
+#Fztable .rel .columnStyle li p {
+  margin-top: 5px;
+}
+
+#Fztable .rel .columnStyle .focuscolor {
+  color: #ff8e24;
+}
+
+#Fztable .rel .rowStyle li {
+  position: relative;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 10px;
+}
+
+#Fztable .rel .rowStyle .focuscolor {
+  color: #ff8e24;
+}
+
+#Fztable .rel .fa-plane {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 12px;
+  color: #ff8e24;
+}
+
+#Fztable .rel .next {
+  right: 0;
+}
+
+#Fztable .rel .prev {
+  left: 150px;
+}
+
+#Fztable .rel .disableStyle {
+  position: absolute;
+  right: 0;
+  left: 0;
 }
 
 @media screen and (min-width: 768px) {
