--- a/Project/0914/cmg_coli/css.scss
+++ b/Project/0914/cmg_coli/css.scss
@@ -10,27 +10,22 @@ $classname: "cmg_coli";
 /*
  * Start your css code
  */
+$color-border: #dddddd;
+$color-liBG: #f4f3ea;
+
 .#{$classname} {
   // display: block;
-  outline: 1px solid red;
-
-  > * {
-    &:after {
-      content: "";
-      display: block;
-      clear: both;
-    }
-  }
 
   .btn-1 {
-    width: 58px;
-    height: 18px;
+    padding: 3px 5px;
+    // width: 58px;
+    // height: 18px;
     border-radius: 3px;
     background-color: #ff615d;
-    line-height: 18px;
+    // line-height: 18px;
     text-align: center;
     font-family: MicrosoftJhengHei;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     font-style: normal;
     font-stretch: normal;
@@ -41,13 +36,13 @@ $classname: "cmg_coli";
   }
 
   .btn-2 {
-    width: 33px;
-    height: 18px;
+    padding: 3px 5px;
     border-radius: 3px;
     background-color: #ff8400;
     color: #fff;
-    font-size: 10px;
-    line-height: 18px;
+    font-family: Verdana;
+    font-size: 12px;
+    // line-height: 18px;
     text-align: center;
     // background-color: var(--pumpkin-orange);
   }
@@ -83,11 +78,6 @@ $classname: "cmg_coli";
   //   color: #222222;
   // }
 
-  .clear {
-    display: block;
-    clear: both;
-  }
-
   ul {
     padding: 0;
     margin: 0;
@@ -102,75 +92,47 @@ $classname: "cmg_coli";
       clear: both;
     }
     li {
-      // outline: 1px solid #f00;
       list-style-type: none;
       display: flex;
       justify-content: space-between;
-      // height: 50px;
-      border-bottom: 1px solid #dddddd;
+      border-top: 1px solid $color-border;
+      border-bottom: 1px solid $color-border;
+      margin-bottom: -1px;
+      float: left;
       font-size: 16px;
       padding: 0 10px;
-      &.float {
-        float: left;
-      }
-      &:first-child {
-        border-top: 1px solid #dddddd;
-      }
-      &:nth-child(even) {
-        background-color: #f4f3ea;
-      }
-      &.col-1 {
+      &.col-1,
+      &.col-2,
+      &.col-3 {
         width: 100%;
       }
-      &.col-2 {
-        width: (100%/2);
-      }
-      &.col-3 {
-        width: (100%/3);
+      &:nth-child(even) {
+        background-color: $color-liBG;
       }
       .flag {
-        outline: 1px solid red;
-        width: 8px;
-        height: 13px;
+        width: 24px;
+        height: 24px;
+        background: url("/images/flag@3x.png") no-repeat center;
+        background-size: 90%;
       }
       .inside-left {
-        padding: 10px 0;
+        padding: 8px 0;
         font-family: MicrosoftJhengHei;
         font-weight: bold;
         font-style: normal;
         font-stretch: normal;
         letter-spacing: normal;
         color: #222222;
-        word-wrap: break-word;
-        // justify-content: center;
-        // align-items: center;
-        // outline: 1px solid red;
+        overflow: hidden;
+        margin-right: 20px;
+        max-height: 60px; // line-height: 1.5;
+        //   &.twoLineHeight {
+        //   height: 60px;
+        // }
         > * {
           margin-right: 5px;
           float: left;
         }
-        // .text {
-        //   // width: 100px;
-        //   font-family: MicrosoftJhengHei;
-        //   font-size: 14px;
-        //   font-weight: bold;
-        //   font-style: normal;
-        //   font-stretch: normal;
-        //   line-height: 1;
-        //   letter-spacing: normal;
-        //   color: #222222;
-        //   overflow: hidden;
-        //   text-overflow: ellipsis; // 多的字 ... 取代
-        //   // white-space: nowrap; // 字死都不換行
-        //   display: -webkit-box;
-        //   -webkit-line-clamp: 3;
-
-        //   margin-right: 0;
-
-        //   &.red {
-        //     color: #e10500;
-        //   }
-        // }
       }
       .inside-right {
         // outline: 1px solid blue;
@@ -199,32 +161,95 @@ $classname: "cmg_coli";
   @media screen and (min-width: $screen-desktop) {
     // style on desktop device
     ul {
-      .left-content,
-      .right-content {
-        float: none;
-      }
       li {
+        // outline: 1px solid red;
+        margin-right: 10px;
         .inside-left {
-          .text {
-            font-size: 16px;
-          }
+          padding: 13px 0;
+          word-wrap: break-word;
+          overflow: hidden;
+          white-space: nowrap; // 字死都不換行
+          // text-overflow: ellipsis; // 多的字 ... 取代
+          // margin-right: 20px;
+          cursor: pointer;
+          height: 50px;
+          margin-right: 20px;
         }
         .inside-right {
           .price {
             font-size: 18px;
           }
         }
+        &:hover .inside-left {
+          color: red;
+        }
+        &:nth-child(even) {
+          background-color: #fff;
+        }
+        &.col-1 {
+          width: 100%;
+          &:nth-child(even) {
+            background-color: $color-liBG;
+          }
+        }
+        &.col-2 {
+          width: calc(100% / 2 - 5px);
+          &:nth-child(3) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(4) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(7) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(8) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(even) {
+            margin-right: 0;
+          }
+        }
+        &.col-3 {
+          width: calc(100% / 3 - 7px);
+          &:nth-child(4) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(5) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(6) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(10) {
+            background-color: $color-liBG;
+          }
+          &:nth-child(3) {
+            margin-right: 0;
+          }
+          &:nth-child(6) {
+            margin-right: 0;
+          }
+          &:nth-child(9) {
+            margin-right: 0;
+          }
+        }
       }
     }
     .btn-1 {
+      // padding: 3px 10px;
+      padding: 0;
       width: 72px;
       height: 24px;
-      font-size: 12px;
+      font-size: 14px;
       line-height: 24px;
     }
     .btn-2 {
-      width: 35px;
+      // padding: 3px 10px;
+      padding: 0;
+      width: 45px;
       height: 24px;
+      font-size: 14px;
       line-height: 24px;
     }
   }
