--- a/Homework/Calendar/src/css.scss
+++ b/Homework/Calendar/src/css.scss
@@ -37,6 +37,7 @@ $tab-color: #666;
       font-size: 25px;
       padding: 0 5px;
       color: #e10500;
+      cursor: pointer;
     }
     .next {
       right: 0;
